@@ -1,23 +1,0 @@
-/*
- * dump-sming.h --
- *
- *      Operations to dump SMIng module information.
- *
- * Copyright (c) 1999 Frank Strauss, Technical University of Braunschweig.
- *
- * See the file "COPYING" for information on usage and redistribution
- * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
- *
- * @(#) $Id: dump-sming.h,v 1.4 1999/05/27 20:06:01 strauss Exp $
- */
-
-#ifndef _DUMP_SMING_H
-#define _DUMP_SMING_H
-
-
-
-extern int dumpSming(const char *modulename);
-
-
-
-#endif /* _DUMP_SMING_H */
